UI shifts/shows artifacts in side-by-side stereoscopic 3D mode #73169

Closed
opened 2020-01-16 19:24:26 +01:00 by ChristopherAnderssarian · 7 comments

System Information
Operating system: Windows 7
GPU: Radeon Vega 64, Divider version: 19.12.2
CPU: Intel Core i7-5960X

Blender Version

Working: blender-2.79b-f4dc9f9d68b-windows64 (official release)
Broken: blender-2.80-f6cb5f54494e-windows64 (official release)
Broken: blender-2.83-eca8bae6718d-windows64 (build bot)

Short description of error

The UI glitches out when interacting with certain elements, showing out-of-place editors and panels, as can best be shown in the screenshots.

Reference 2.79b Start-up 2.80 Start-up 2.83
2.79b_Static.png 2.80_Static.png 2.83_Static.png
The mouse has just clicked on "File"
2.83_Mouse_On_File.png
Trying to move the cube
2.83_Mouse_trying_to_move_an_object.png

The outliner struggles with selection...

2.83_Mouse_offset.png 20200116_170840.jpg

The new file browser seems to be having some issues as well..

Clicking on "Name"
2.83_Mouse_On_Name_in_file_brower_before.png 2.83_Mouse_On_Name_in_file_brower_after.png

Exact steps for others to reproduce the error from scratch

  • Enable Stereoscopic in the output properties

  • In Window set stereo 3D to side-by-side

  • Toggle Window Full Screen

**System Information** Operating system: Windows 7 GPU: Radeon Vega 64, Divider version: 19.12.2 CPU: Intel Core i7-5960X **Blender Version** Working: `blender-2.79b-f4dc9f9d68b-windows64` (official release) Broken: `blender-2.80-f6cb5f54494e-windows64` (official release) Broken: `blender-2.83-eca8bae6718d-windows64` (build bot) **Short description of error** The UI glitches out when interacting with certain elements, showing out-of-place editors and panels, as can best be shown in the screenshots. | Reference 2.79b | Start-up 2.80 | Start-up 2.83 | | -- | -- | -- | | ![2.79b_Static.png](https://archive.blender.org/developer/F8281787/2.79b_Static.png) | ![2.80_Static.png](https://archive.blender.org/developer/F8281789/2.80_Static.png) | ![2.83_Static.png](https://archive.blender.org/developer/F8281797/2.83_Static.png) | | The mouse has just clicked on "File" | | -- | | ![2.83_Mouse_On_File.png](https://archive.blender.org/developer/F8281794/2.83_Mouse_On_File.png) | | Trying to move the cube | | -- | | ![2.83_Mouse_trying_to_move_an_object.png](https://archive.blender.org/developer/F8281831/2.83_Mouse_trying_to_move_an_object.png) | The outliner struggles with selection... | ![2.83_Mouse_offset.png](https://archive.blender.org/developer/F8281855/2.83_Mouse_offset.png) | ![20200116_170840.jpg](https://archive.blender.org/developer/F8281859/20200116_170840.jpg) | | -- | -- | The new file browser seems to be having some issues as well.. | | Clicking on "Name" | | -- | -- | | ![2.83_Mouse_On_Name_in_file_brower_before.png](https://archive.blender.org/developer/F8281803/2.83_Mouse_On_Name_in_file_brower_before.png) | ![2.83_Mouse_On_Name_in_file_brower_after.png](https://archive.blender.org/developer/F8281805/2.83_Mouse_On_Name_in_file_brower_after.png) | **Exact steps for others to reproduce the error from scratch** - Enable Stereoscopic in the output properties - In `Window` set stereo 3D to side-by-side - Toggle Window Full Screen

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Seems like there are multiple issues here.

One of the issue is that a wrong buffer is used to redraw a part of the screen, but should have been done in their specific offscreen buffer.

Might be an issue in the window manager.

Seems like there are multiple issues here. One of the issue is that a wrong buffer is used to redraw a part of the screen, but should have been done in their specific offscreen buffer. Might be an issue in the window manager.
Jeroen Bakker self-assigned this 2020-05-18 15:12:35 +02:00
Member

The gpu matrix when drawing both offscreen images to the screen is incorrect.

When rendering correctly:

ModelViewProjectionMatrix {0.00104, 0.00, 0.00, -0.99961}
{0.00, 0.00185, 0.00, -0.99931}
{0.00, 0.00, -0.01, 0.00}
{0.00, 0.00, 0.00, 1.00} float4x4 (column_major)

When rendering incorrectly:

ModelViewProjectionMatrix {0.00132, 0.00, 0.00, -0.9995}
{0.00, 0.07692, 0.00, -0.97115}
{0.00, 0.00, -0.01, 0.00}
{0.00, 0.00, 0.00, 1.00} float4x4 (column_major)

So it seems like the viewport matrix is changed

The gpu matrix when drawing both offscreen images to the screen is incorrect. When rendering correctly: ``` ModelViewProjectionMatrix {0.00104, 0.00, 0.00, -0.99961} {0.00, 0.00185, 0.00, -0.99931} {0.00, 0.00, -0.01, 0.00} {0.00, 0.00, 0.00, 1.00} float4x4 (column_major) ``` When rendering incorrectly: ``` ModelViewProjectionMatrix {0.00132, 0.00, 0.00, -0.9995} {0.00, 0.07692, 0.00, -0.97115} {0.00, 0.00, -0.01, 0.00} {0.00, 0.00, 0.00, 1.00} float4x4 (column_major) ``` So it seems like the viewport matrix is changed

This issue was referenced by fc06c248ed

This issue was referenced by fc06c248edd1ef29e4ca0daeb9f866eb8bd95621
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73169
No description provided.